--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
     "mocha-steps": "^1.3.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.3"
-  }
+	},
+	"resolutions": { "**/**/lodash": "^4.17.19" }
 }
